--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ django==4.1.2
 djangorestframework
 requests
 django-debug-toolbar
+asgiref==3.5.2
+sqlparse==0.4.2
+django-taggit==3.0.0
+Markdown==3.4.1
+psycopg2-binary
